tokio-postgres/tests/derive/fail/invalid_rename_rule.rs
use tokio_postgres::FromRow;

#[derive(FromRow)]
#[postgres(rename_all = "invalid")]
struct User {
    id: i64,
}

fn main() {}
